--- a/floirotblog/hugo.toml
+++ b/floirotblog/hugo.toml
@@ -3,7 +3,6 @@ languageCode = 'en-us'
 title = 'Floirot'
 theme = 'hugo-bearcub'
 
-copyright = "Florian Chmelar"
 defaultContentLanguage = "en"
 
-description = "Toto je taká moja stránka."
+description = "Site for something"
