--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
-[submodule "floirotblog/themes/hugo-bearcub"]
-	path = floirotblog/themes/hugo-bearcub
-	url = https://github.com/clente/hugo-bearcub
 [submodule "floirotblog/public"]
 	path = floirotblog/public
 	url = https://github.com/floirot/floirot.github.io.git
 	branch = main
+[submodule "floirotblog/themes/hugo-theme-monochrome"]
+	path = floirotblog/themes/hugo-theme-monochrome
+	url = https://github.com/kaiiiz/hugo-theme-monochrome.git
