--- a/floirotblog/hugo.toml
+++ b/floirotblog/hugo.toml
@@ -1,7 +1,7 @@
 baseURL = 'https://floirot.github.io/'
 languageCode = 'en-us'
 title = 'Floirot'
-theme = 'hugo-bearcub'
+theme = 'hugo-theme-monochrome'
 
 defaultContentLanguage = "en"
 
