--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "floirotblog/themes/hugo-theme-monochrome"]
 	path = floirotblog/themes/hugo-theme-monochrome
 	url = https://github.com/kaiiiz/hugo-theme-monochrome.git
+[submodule "floirotblog/themes/hugo-flex"]
+	path = floirotblog/themes/hugo-flex
+	url = https://github.com/ldeso/hugo-flex.git
